# Android

AndroidCompose/app/: build.gradle
AndroidCompose/app/src/main/: AndroidManifest.xml
AndroidCompose/gradle/wrapper/: gradle-wrapper.properties
AndroidSdkStudy/: settings.gradle
AndroidSdkStudy/app/: build.gradle
AndroidSdkStudy/app/src/main/: AndroidManifest.xml
AndroidSdkStudy/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
AndroidSdkStudy/gradle/wrapper/: gradle-wrapper.properties
ComponentStudy/: build.gradle  config.gradle  gradle.properties  settings.gradle
ComponentStudy/advance_ui/: build.gradle
ComponentStudy/advance_ui/src/main/: AndroidManifest.xml
ComponentStudy/aidl_client/: build.gradle
ComponentStudy/aidl_client/src/main/: AndroidManifest.xml
ComponentStudy/algorithm/: build.gradle
ComponentStudy/algorithm/src/main/: AndroidManifest.xml
ComponentStudy/app/: build.gradle
ComponentStudy/app/src/main/: AndroidManifest.xml
ComponentStudy/architecture/: build.gradle
ComponentStudy/architecture/src/main/: AndroidManifest.xml
ComponentStudy/av_module/: build.gradle
ComponentStudy/av_module/src/main/: AndroidManifest.xml
ComponentStudy/certification/: build.gradle
ComponentStudy/certification/src/main/: AndroidManifest.xml
ComponentStudy/certification/src/main/assets/: my_client.cer
ComponentStudy/customview/: build.gradle
ComponentStudy/customview/src/main/: AndroidManifest.xml
ComponentStudy/demo/: build.gradle
ComponentStudy/demo/src/main/: AndroidManifest.xml
ComponentStudy/exoplayer_common/: build.gradle
ComponentStudy/exoplayer_common/src/main/: AndroidManifest.xml
ComponentStudy/exoplayer_music/: build.gradle
ComponentStudy/exoplayer_music/src/main/: AndroidManifest.xml
ComponentStudy/fragment/: build.gradle
ComponentStudy/fragment/src/main/: AndroidManifest.xml
ComponentStudy/gradle/wrapper/: gradle-wrapper.properties
ComponentStudy/hilt/: build.gradle
ComponentStudy/hilt/src/main/: AndroidManifest.xml
ComponentStudy/kidiconnect2021/: build.gradle
ComponentStudy/kidiconnect2021/src/main/: AndroidManifest.xml
ComponentStudy/kotlin/: build.gradle
ComponentStudy/kotlin/src/main/: AndroidManifest.xml
ComponentStudy/maskdemo/: build.gradle
ComponentStudy/maskdemo/src/main/: AndroidManifest.xml
ComponentStudy/maskdemo2/: build.gradle
ComponentStudy/maskdemo2/src/main/: AndroidManifest.xml
ComponentStudy/mylibrary/: build.gradle
ComponentStudy/opengl/: build.gradle
ComponentStudy/opengl/libs/: ti-sdk.aar
ComponentStudy/opengl/src/main/: AndroidManifest.xml
ComponentStudy/sophix/: aliyun-emas-services.json  build.gradle  mapping.txt  proguard-rules.pro  store-debug.jks
ComponentStudy/sophix/release/: output-metadata.json
ComponentStudy/sophix/src/main/: AndroidManifest.xml
ComponentStudy/tinker/: build.gradle  tinker_multidexkeep.pro
ComponentStudy/tinker/src/main/: AndroidManifest.xml
JNI/EnjoyFix/: settings.gradle
JNI/EnjoyFix/app/: build.gradle
JNI/EnjoyFix/app/src/main/: AndroidManifest.xml
JNI/EnjoyFix/gradle/wrapper/: gradle-wrapper.properties
JNI/JNIKotlinTest01/: settings.gradle
JNI/JNIKotlinTest01/app/: build.gradle
JNI/JNIKotlinTest01/app/src/main/: AndroidManifest.xml
JNI/JNIKotlinTest01/gradle/wrapper/: gradle-wrapper.properties
JNI/JNIParcel/: settings.gradle
JNI/JNIParcel/app/: build.gradle
JNI/JNIParcel/app/src/main/: AndroidManifest.xml
JNI/JNIParcel/gradle/wrapper/: gradle-wrapper.properties
JNI/JNITest01/: settings.gradle
JNI/JNITest01/app/: build.gradle
JNI/JNITest01/app/src/main/: AndroidManifest.xml
JNI/JNITest01/gradle/wrapper/: gradle-wrapper.properties
JNI/JNI_DynamicRegister/: settings.gradle
JNI/JNI_DynamicRegister/app/: build.gradle
JNI/JNI_DynamicRegister/app/src/main/: AndroidManifest.xml
JNI/JNI_DynamicRegister/gradle/wrapper/: gradle-wrapper.properties
JNI/VoiceChangeTest01/: settings.gradle
JNI/VoiceChangeTest01/app/: build.gradle
JNI/VoiceChangeTest01/dynamicregister/: build.gradle
JNI/VoiceChangeTest01/gradle/wrapper/: gradle-wrapper.properties
JNI/ndk26_cmake/: settings.gradle
JNI/ndk26_cmake/app/: build.gradle
JNI/ndk26_cmake/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNI/ndk26_cmake/gradle/wrapper/: gradle-wrapper.properties
JNI/ndk27_ffmpeg/: settings.gradle
JNI/ndk27_ffmpeg/app/: build.gradle
JNI/ndk27_ffmpeg/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNI/ndk27_ffmpeg/gradle/wrapper/: gradle-wrapper.properties
JNI/ndk28_cmake/: settings.gradle
JNI/ndk28_cmake/app/: build.gradle
JNI/ndk28_cmake/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
JNI/ndk28_cmake/gradle/wrapper/: gradle-wrapper.properties
JNI/ndk28_mk/: settings.gradle
JNI/ndk28_mk/app/: build.gradle
JNI/ndk28_mk/gradle/wrapper/: gradle-wrapper.properties
JNI/ndk_player/: settings.gradle
JNI/ndk_player/app/: build.gradle
JNI/ndk_player/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  DerryPlayer.cpp  DerryPlayer.h  JNICallbackHelper.cpp  JNICallbackHelper.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
JNI/ndk_player/app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
JNI/ndk_player/gradle/wrapper/: gradle-wrapper.properties
JNI/rtmp_push/: settings.gradle
JNI/rtmp_push/app/: build.gradle
JNI/rtmp_push/app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  native-lib.cpp
JNI/rtmp_push/app/src/main/cpp/librtmp/: CMakeLists.txt
JNI/rtmp_push/gradle/wrapper/: gradle-wrapper.properties
NDK/BboyPlayer/: settings.gradle
NDK/BboyPlayer/app/: build.gradle
NDK/BboyPlayer/app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  BboyPlayer.cpp  BboyPlayer.h  CMakeLists.txt  JNICallbackHelper.cpp  JNICallbackHelper.h  VideoChannel.cpp  VideoChannel.h  log4c.h  native-lib.cpp  safe_queue.h  util.h
NDK/BboyPlayer/gradle/wrapper/: gradle-wrapper.properties
NDK/DerryPlayer/: settings.gradle
NDK/DerryPlayer/app/: build.gradle
NDK/DerryPlayer/gradle/wrapper/: gradle-wrapper.properties
(+628 files in other folders)
